More clean-up/clarification to jl.instrument spec